add semantic report writer | rebuild compiler pipeline | add reset method to Css Symbol Table | rebuild final generation classes | add getErrors and hasErrors methods to flask python symbol table | refactore main method so it only does compile and run java server