@@ -1,73 +1,45 @@
 package CompilerOutput;
 
-import CssSymbolTable.CssSymbolTable;
 import FlaskPythonSymbolTable.FlaskPythonSymbolTable;
 import TemplatesSymbolTable.TemplatesSymbolTable;
 
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import TemplatesSymbolTable.TemplatesSymbol;
+import java.util.List;
 
 public class SemanticReportWriter {
 
     public void write(
             FlaskPythonSymbolTable pythonSymbolTable,
-            TemplatesSymbolTable indexSymbolTable,
-            TemplatesSymbolTable detailSymbolTable,
-            TemplatesSymbolTable addSymbolTable,
+            List<TemplatesSymbolTable> templatesSymbolTables,
+            List<String> availableTemplatesFileNames,
             String outputPath
     ) throws IOException {
 
-        StringBuilder report = new StringBuilder();
-
-        report.append(
-                "================ SEMANTIC ANALYSIS REPORT ================\n\n"
-        );
-
-        report.append(
-                captureSection(
-                        "PYTHON / FLASK",
-                        pythonSymbolTable::printTable
-                )
-        );
-
-        report.append(
-                buildTemplateSection(
-                        "JINJA / index.html",
-                        indexSymbolTable
-                )
-        );
-
-        report.append(
-                buildTemplateSection(
-                        "JINJA / detail.html",
-                        detailSymbolTable
-                )
-        );
-
-        report.append(
-                buildTemplateSection(
-                        "JINJA / add.html",
-                        addSymbolTable
-                )
-        );
-
-        report.append(
-                captureSection(
-                        "CSS",
-                        CssSymbolTable.instance::printTable
-                )
-        );
-
-        Path path = Paths.get(outputPath);
+        Path path = Path.of(outputPath);
 
         if (path.getParent() != null) {
             Files.createDirectories(path.getParent());
+        }
+
+        StringBuilder report = new StringBuilder();
+
+        report.append("================ SEMANTIC REPORT ================\n\n");
+
+        appendSection(
+                report,
+                "Python Semantic Analysis",
+                pythonSymbolTable.getErrors()
+        );
+
+        for (int i = 0; i < templatesSymbolTables.size(); i++) {
+            appendSection(
+                    report,
+                    "Template Semantic Analysis - " + availableTemplatesFileNames.get(i),
+                    templatesSymbolTables.get(i).getErrors()
+            );
         }
 
         Files.writeString(
@@ -76,105 +48,27 @@ public class SemanticReportWriter {
                 StandardCharsets.UTF_8
         );
 
-        System.out.println(
-                "Semantic report generated: "
-                        + path.toAbsolutePath()
-        );
+        System.out.println("Semantic report generated: " + outputPath);
     }
 
-
-    private String captureSection(
+    private void appendSection(
+            StringBuilder report,
             String title,
-            Runnable printer
+            List<String> errors
     ) {
+        report.append("----- ")
+                .append(title)
+                .append(" -----\n");
 
-        PrintStream originalOut = System.out;
-
-        ByteArrayOutputStream buffer =
-                new ByteArrayOutputStream();
-
-        try (
-                PrintStream capture =
-                        new PrintStream(buffer, true, StandardCharsets.UTF_8)
-        ) {
-
-            System.setOut(capture);
-
-            printer.run();
-
-        } finally {
-
-            System.setOut(originalOut);
+        if (errors == null || errors.isEmpty()) {
+            report.append("No Semantic Errors Found.\n\n");
+            return;
         }
 
-        return "================ "
-                + title
-                + " ================\n\n"
-                + buffer.toString(StandardCharsets.UTF_8)
-                + "\n";
-    }
-
-    private String buildTemplateSection(
-            String title,
-            TemplatesSymbolTable symbolTable
-    ) {
-
-        StringBuilder section =
-                new StringBuilder();
-
-        section.append(
-                "================ "
-                        + title
-                        + " ================\n\n"
-        );
-
-        for (TemplatesSymbol symbol : symbolTable.getAllSymbols()) {
-
-            String location =
-                    symbol.getLine() == 0
-                            ? "Injected Context"
-                            : "Line " + symbol.getLine();
-
-            section.append(
-                    String.format(
-                            "| %-25s | %-20s | %-20s |\n",
-                            symbol.getName(),
-                            symbol.getKind(),
-                            location
-                    )
-            );
+        for (String error : errors) {
+            report.append(error).append("\n");
         }
 
-        if (
-                !symbolTable.getUsedSelectors().isEmpty()
-                        || !symbolTable.getUsedClasses().isEmpty()
-                        || !symbolTable.getUsedIds().isEmpty()
-        ) {
-
-            section.append(
-                    "\n| HTML SELECTORS USAGE (For CSS Linking) |\n"
-            );
-        }
-
-        if (symbolTable.hasErrors()) {
-
-            section.append(
-                    "\nStatus: Semantic Errors Found.\n"
-            );
-
-            for (String error : symbolTable.getErrors()) {
-                section.append(error).append("\n");
-            }
-
-        } else {
-
-            section.append(
-                    "\nStatus: No Semantic Errors Found.\n"
-            );
-        }
-
-        section.append("\n");
-
-        return section.toString();
+        report.append("\n");
     }
 }
